height fix -  on mobile navigators

--- a/sass/scss/style.scss
+++ b/sass/scss/style.scss
@@ -19,7 +19,6 @@
 body {
   @include flexed-column;
   background: linear-gradient($lightblue, $seagreen);
-  height: 100vh;
 }
 
 i {
